manifests/deploy.yaml
#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: trader
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: trader
        solution: stock-trader
        version: v1
    spec:
      containers:
      - name: trader
        image: stocktraderdemo/trader
        imagePullPolicy: Always
        ports:
          - containerPort: 9080
          - containerPort: 9443
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: trader-service
  labels:
    app: trader
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    app: trader
---
#Configure the ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trader-ingress
  annotations:
    #kubernetes.io/ingress.class: "istio"
    #ingress.kubernetes.io/rewrite-target: /trader
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "sha1"
    #ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/secure-backends: "true"
    #ingress.kubernetes.io/app-root: "/trader"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /trader
        backend:
          serviceName: trader-service
          servicePort: 9443
